--- a/LifeArcade/package.json
+++ b/LifeArcade/package.json
@@ -6,7 +6,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "prebuild": "npm run copy:src",
     "build": "vite build",
+    "copy:src": "node -e \"require('fs').cpSync('src', 'public/src', {recursive: true})\"",
+    "clean": "node -e \"try { require('fs').rmSync('public/src', {recursive: true, force: true}); require('fs').rmSync('dist', {recursive: true, force: true}); } catch(e) {}\"",
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest --coverage"
