--- a/LifeArcade/public/presets/space-invaders/easy.json
+++ b/LifeArcade/public/presets/space-invaders/easy.json
@@ -2,29 +2,38 @@
   "name": "easy",
   "version": 3,
   "game": "space-invaders",
-  "timestamp": "2025-11-18T10:00:00.000Z",
-  "description": "Beginner-friendly with slower enemies and larger cells",
+  "timestamp": "2025-11-18T15:49:48.625Z",
   "config": {
-    "globalCellSize": 35,
+    "globalCellSize": 15,
+    "loopUpdateRate": 5,
     "invader": {
-      "rows": 2,
       "cols": 6,
+      "rows": 2,
       "spacing": 80,
+      "startX": 180,
+      "startY": 200,
       "moveInterval": 45,
-      "speed": 30,
-      "golUpdateRate": 10
+      "speed": 30
     },
     "player": {
       "speed": 25,
-      "shootCooldown": 10,
-      "golUpdateRate": 15
+      "shootCooldown": 10
     },
     "bullet": {
-      "speed": -12,
-      "golUpdateRate": 0
+      "speed": -12
     },
-    "explosion": {
-      "golUpdateRate": 6
+    "explosion": {}
+  },
+  "appearances": {
+    "player": {
+      "mode": "modified-gol",
+      "pattern": null,
+      "period": null
+    },
+    "invaders": {
+      "mode": "static",
+      "pattern": "lightweight_spaceship",
+      "period": 2
     }
   }
 }
