--- a/LifeArcade/package.json
+++ b/LifeArcade/package.json
@@ -24,8 +24,9 @@
   },
   "homepage": "https://github.com/brunobarran/SGx_GoogleEmployment#readme",
   "devDependencies": {
+    "jsdom": "^27.2.0",
     "vite-plugin-static-copy": "^3.1.4",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.12"
   },
   "dependencies": {
     "p5": "^2.1.1",
